# tinyllm

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/tinyllm/: README.md  __init__.py  inference.py  model.py  tokeni.py  tokeni2.py  train.py  try_gpt.py
src/tinyllm2/: README.md  inference.py  model.py  prepare_aozora.py  test_tokenizer.py  train.py
src/tinyllm3/: README.md  inference.py  model.py  train.py  train_tokenizer.py
