[project]
name = "tinyllm"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "uv>=0.2.27",
    "torch==2.3.1+cu121",
    "tqdm>=4.64.1",
    "numpy>=1.26.3",
    "tiktoken>=0.7.0",
    "datasets==2.18",
    "click>=8.1.7",
    "tokenizers>=0.19.1",
    "tensorboard>=2.17.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
# url = "https://download.pytorch.org/whl/cpu"
type = "index"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tinyllm"]
